# np-mcp

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  config.example.yaml  pyproject.toml
deploy/: np-mcp.service.template
np_mcp/: __main__.py  config.py  events.py  messages.py  npapi.py  research.py  server.py  smoke.py  snapshot.py  state.py  threats.py
tests/: conftest.py  test_events.py  test_research.py  test_snapshot.py  test_threats.py
tests/fixtures/: scanning_data.json
