[project]
name = "np-mcp"
version = "0.1.0"
description = "Neptune's Pride MCP server: game status, threats, research, events, messages"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["np_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
